tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-match-expression-close.ari
fn broken(flag: bool) -> i64 {
  let value = match flag {
    true => 1,
fn after() -> i64 {
  return 2;
}
